# chatimprovr

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  architecture.md  cimvr.py  notes.txt  perf.sh  run_client.sh  run_server.sh  stages.md
cimvr_physics_core/: Cargo.toml
cimvr_physics_core/src/plugin/: configuration.rs
client/: Cargo.toml  cimvr.py
client/src/: component_ui.rs  desktop.rs  desktop_input.rs  gamepad.rs  glutin_window_ctx.rs  gpgpu.rs  input.rs  login_screen.rs  main.rs  plugin_cache.rs  plugin_ui.rs  realsense.rs  render.rs  ui.rs  vr.rs
client/src/shaders/: unlit.vert
common/: Cargo.toml
common/src/: desktop.rs  gamepad.rs  generic_handle.rs  gpgpu.rs  input.rs  lib.rs  physics.rs  pointcloud.rs  render.rs  transform.rs  ui.rs  vr.rs
common/src/shaders/: unlit.frag  unlit.vert
common/src/utils/: camera.rs  client_tracker.rs  input_helper.rs  mod.rs
engine/: Cargo.toml
engine/src/: dyn_edit.rs  ecs.rs  hotload.rs  lib.rs  network.rs  physics.rs  plugin.rs  timing.rs
engine_derive_macros/: Cargo.toml
engine_derive_macros/src/: lib.rs
engine_interface/: Cargo.toml
engine_interface/src/: channels.rs  component_validate.rs  component_validate_error.rs  component_validation.rs  dyn_edit.rs  ecs.rs  lib.rs  network.rs  pcg.rs  plugin.rs  print.rs  serial.rs  stdout.rs  system.rs
engine_interface/tests/: component_validation_test.rs
example_plugins/: README.md  compile_all.fish  compile_all.ps1  compile_all.sh
example_plugins/arcball_camera/: Cargo.toml
example_plugins/arcball_camera/src/: lib.rs
example_plugins/avatars/: Cargo.toml
example_plugins/avatars/src/: lib.rs
example_plugins/camera/: Cargo.toml
example_plugins/camera/src/: lib.rs
example_plugins/camera2d/: Cargo.toml
example_plugins/camera2d/src/: lib.rs
example_plugins/channels/: Cargo.toml
example_plugins/channels/src/: lib.rs
example_plugins/chat/: Cargo.toml
example_plugins/chat/src/: lib.rs
example_plugins/cube/: Cargo.toml
example_plugins/cube/src/: lib.rs
example_plugins/dancing_cubes/: Cargo.toml
example_plugins/dancing_cubes/src/: lib.rs
example_plugins/dyn_edit_perms/: Cargo.toml
example_plugins/dyn_edit_perms/src/: lib.rs
example_plugins/ecs/: Cargo.toml
example_plugins/ecs/src/: lib.rs
example_plugins/epaint/: Cargo.toml
example_plugins/epaint/src/: lib.rs
example_plugins/first-person/: Cargo.toml
example_plugins/first-person/.cargo/: config.toml
example_plugins/first-person/src/: lib.rs
example_plugins/fluid-sim/: Cargo.toml
example_plugins/fluid-sim/src/: lib.rs
example_plugins/fullscreen_shader/: Cargo.toml
example_plugins/fullscreen_shader/src/: lib.rs
example_plugins/gamepad/: Cargo.toml
example_plugins/gamepad/src/: lib.rs
example_plugins/grid/: Cargo.toml
example_plugins/grid/src/: lib.rs
example_plugins/hello/: Cargo.toml
example_plugins/hello/src/: lib.rs
example_plugins/interdimensional/: Cargo.toml
example_plugins/interdimensional/src/: lib.rs
example_plugins/keyboard/: Cargo.toml
example_plugins/keyboard/src/: lib.rs
example_plugins/lua_editor/: Cargo.toml
example_plugins/lua_editor/.cargo/: config.toml
example_plugins/lua_editor/src/: lib.rs
example_plugins/mouse-capture/: Cargo.toml
example_plugins/mouse-capture/src/: lib.rs
example_plugins/multiple_queries/: Cargo.toml
example_plugins/multiple_queries/src/: lib.rs
example_plugins/obj-axes/: Cargo.toml
example_plugins/obj-axes/.cargo/: config.toml
example_plugins/obj-axes/src/: lib.rs
example_plugins/obj_parser/: Cargo.toml
example_plugins/obj_parser/src/: lib.rs  obj.rs
example_plugins/obj_parser/src/assets/: ship.blend
example_plugins/parenting/: Cargo.toml
example_plugins/parenting/src/: lib.rs
example_plugins/parenting_demo/: Cargo.toml
example_plugins/parenting_demo/src/: lib.rs
example_plugins/particle-life/: Cargo.toml
example_plugins/particle-life-2d/: Cargo.toml
example_plugins/particle-life-2d/src/: sim.rs
example_plugins/particle-life-3d/: Cargo.toml
example_plugins/particle-life-3d/src/: lib.rs
example_plugins/particle-life/src/: lib.rs  query_accel.rs  sim.rs
example_plugins/physics_test/: Cargo.toml
example_plugins/physics_test/src/: lib.rs
example_plugins/pointcloud/: Cargo.toml
example_plugins/pointcloud/src/: lib.rs
example_plugins/randomly_moving_cube/: Cargo.toml
example_plugins/randomly_moving_cube/src/: lib.rs
example_plugins/shader/: Cargo.toml
example_plugins/shader/src/: lib.rs
example_plugins/shader_editor/: Cargo.toml
example_plugins/shader_editor/src/: lib.rs
example_plugins/ui_example/: Cargo.toml
example_plugins/ui_example/src/: client.rs  lib.rs  server.rs
example_plugins/vr-teleport/: Cargo.toml
example_plugins/xyz_reference/: Cargo.toml
obj_loader/: Cargo.toml
obj_loader/src/: lib.rs  obj.rs
obj_parser/: Cargo.toml
obj_parser/.cargo/: config.toml
obj_parser/src/: lib.rs  obj.rs
obj_parser/src/assets/: ship.mtl  (+2 more)
physics/: Cargo.toml
physics/src/: lib.rs
physics/src/dynamics/: mod.rs  rigid_body.rs
physics/src/geometry/: collider.rs  collider_impl.rs  mod.rs
physics/src/geometry/shape_views/: ball.rs  capsule.rs  collider_view.rs  compound.rs  cone.rs  convex_polygon.rs  convex_polyhedron.rs  cuboid.rs  cylinder.rs  halfspace.rs  heightfield.rs  polyline.rs  round_shape.rs  segment.rs  triangle.rs  trimesh.rs
physics/src/plugin/: configuration.rs  context.rs  mod.rs  narrow_phase.rs  plugin.rs  systems.rs
physics_core/: Cargo.toml
physics_core/src/: lib.rs
physics_core/src/dynamics/: mod.rs  rigid_body.rs
physics_core/src/plugin/: configuration.rs  context.rs  mod.rs  plugin.rs  systems.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
plugin2/: Cargo.toml
plugin2/src/: lib.rs
plugin3/: Cargo.toml
plugin3/src/: client.rs  lib.rs  server.rs
server/: Cargo.toml
server/src/: main.rs  physics_manager.rs  physics_setup.rs
tools/: compile_docker.sh  compile_everything.sh  count_src.sh  graph.sh  new.py  run_client.sh  run_server.sh  setup_watches.sh  todo.sh  watch_build.sh  watch_examples.sh
(+9 files in other folders)
