[workspace]
members = [
    "engine_interface",
    "engine",
    "common",
    "server",
    "physics",
    "engine_derive_macros",
    "example_plugins/camera",
    "example_plugins/channels",
    "example_plugins/dancing_cubes",
    "example_plugins/cube",
    "example_plugins/ecs",
    "example_plugins/hello",
    "example_plugins/ui_example",
    "example_plugins/fluid-sim",
    "example_plugins/particle-life",
    "example_plugins/shader",
    "example_plugins/randomly_moving_cube",
    "example_plugins/gamepad",
    "example_plugins/keyboard",
    "example_plugins/chat",
]
 
# Causes a build issue with OpenXR if included in workspace
exclude = [
    "client",
]

[profile.release]
#debug = true
