[workspace]
members = [
    "engine_interface",
    "engine",
    "common",
    "server",
    "engine_derive_macros",
    "example_plugins/camera",
    "example_plugins/channels",
    "example_plugins/dancing_cubes",
    "example_plugins/cube",
    "example_plugins/ecs",
    "example_plugins/hello",
    "example_plugins/ui_example",
    "example_plugins/fluid-sim",
    "example_plugins/shader",
    "example_plugins/randomly_moving_cube",
    "example_plugins/gamepad",
    "example_plugins/keyboard",
    "example_plugins/chat",
    "obj_loader",
    "example_plugins/multiple_queries",
    "example_plugins/camera2d",
    "example_plugins/parenting",
    "example_plugins/parenting_demo",
    "example_plugins/xyz_reference",
    "example_plugins/obj-axes",
    "example_plugins/interdimensional",
    "example_plugins/fullscreen_shader",
    "example_plugins/mouse-capture",
    "example_plugins/first-person",
    "example_plugins/vr-teleport",
    "example_plugins/avatars",
    "example_plugins/grid",
    "example_plugins/shader_editor",
    "example_plugins/lua_editor",
]

# Causes a build issue with OpenXR if included in workspace
exclude = [
    "client",
]

[profile.release]
#debug = true
