[package]
name = "cimvr_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
#vr = ["openxr"]

[dependencies]
cimvr_engine = { path = "../engine" }
cimvr_common = { path = "../common" }
anyhow = "1"
bytemuck = { version = "1.13.1", features = ["extern_crate_alloc"] }
glutin = "0.29.0"
glow = "0.12"
env_logger = "0.10.0"
log = "0.4.17"
structopt = { version = "0.3", default-features = false }
#eframe = "0.22.0"
#egui_glow = { version = "0.22.0", features = ["winit"] }
#egui_dock = "0.6.3"
egui_dock = { git = "https://github.com/Masterchef365/egui_dock.git", branch = "insert-texture" }
#egui = { version = "0.19.0", default-features = false, features = [
#egui = { version = "0.19.0", default-features = false, features = [
    #"bytemuck",
    #"default_fonts", # Embed the default egui fonts.
#], git = "https://github.com/Masterchef365/egui.git", branch = "fix-glow-winit-dpi" }
#egui_glow = { version = "0.19.0", features = ["winit"], git = "https://github.com/Masterchef365/egui.git", branch = "fix-glow-winit-dpi" }
#egui-winit = { version = "0.19.0", default-features = false }
#raw-window-handle = "0.5.0"
gilrs = { version = "0.10.2", default-features = false, features = ["xinput"] }
directories = "5.0.1"

#[target.'cfg(target_os = "linux")'.dependencies]
#openxr = { version = "0.17.1", optional = true, features = ["loaded"] }
#glutin-openxr-opengl-helper = { git = "https://github.com/ChatImproVR/rust-opengl-openxr-example.git", rev = "c56b2dc" }

#[target.'cfg(target_os = "windows")'.dependencies]
#openxr = { version = "0.17.1", optional = true, features = ["static"] }
#glutin-openxr-opengl-helper = { git = "https://github.com/ChatImproVR/rust-opengl-openxr-example.git", rev = "c56b2dc" }

eframe = { git = "https://github.com/Masterchef365/egui.git", branch = "insert-texture" }
#egui = { git = "https://github.com/Masterchef365/egui.git", branch = "insert-texture" }
egui_glow = { git = "https://github.com/Masterchef365/egui.git", branch = "insert-texture" }
epaint = { git = "https://github.com/Masterchef365/egui.git", branch = "insert-texture", features = ["extra_asserts"] }
