[package]
name = "cimvr_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cimvr_engine_interface = { path = "../engine_interface" }
wasmtime = "3.0.1"
anyhow = "1"
rand = "0.8"
ahash = "0.8.2"
log = "0.4.17"
