[package]
name = "cimvr_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cimvr_engine_interface = { path = "../engine_interface" }
serde = { version = "1", features = ["derive"] }
wasm-bridge = "0.2.2"
anyhow = "1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
ahash = "0.8.2"
log = "0.4.17"
notify = "5.0.0"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
