[package]
name = "engine_derive_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
cimvr_common = { path = "/home/exiled/Documents/ChatImprovr/iteration0/common" }
cimvr_engine_interface = { path = "/home/exiled/Documents/ChatImprovr/iteration0/engine_interface" }
quote = "1.0"
syn = "1.0"

