[package]
name = "cimvr_derive_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
# cimvr_common = { path = "/home/exiled/Documents/ChatImprovr/iteration0/common" }
# cimvr_engine_interface = { path = "/home/exiled/Documents/ChatImprovr/iteration0/engine_interface" }
#cimvr_engine_interface = { path = "../engine_interface"}
quote = "1.0"
syn = "1.0"
serde = { version = "1", features = ["derive"] }
bincode = "1"
proc-macro2 = "1.0.52"
