[package]
name = "cimvr_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cimvr_engine = { path = "../engine" }
cimvr_common = { path = "../common" }
env_logger = "0.10.0"
structopt = { version = "0.3", default-features = false }
log = "0.4.17"
rapier3d = { version = "0.17.2", features = ["serde-serialize"]}
