[package]
name = "camera"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cimvr_common = { path = "/home/exiled/Documents/ChatImprovr/iteration0/common" }
cimvr_engine_interface = { path = "/home/exiled/Documents/ChatImprovr/iteration0/engine_interface" }
serde = { version = "1", features = ["derive"] }
