[package]
name = "first-person"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cimvr_common = { path = "../../common/" }
cimvr_engine_interface  = { path = "../../engine_interface/" }
serde = { version = "1", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
