[package]
name = "parenting_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cimvr_common = { path = "../../common" }
cimvr_engine_interface = { path = "../../engine_interface" }
parenting = { path = "../parenting", features = ["library"] }
serde = { version = "1", features = ["derive"] }
